# ImHexDiscordRPC

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/DiscordGameSDK/: CMakeLists.txt
lib/DiscordGameSDK/: CMakeLists.txt
romfs/lang/: en_US.json
src/: plugin.cpp
